lib/src/compiler/tests/testdata/errors/8.out
error[E100]: wrong type
 --> line:2:29
  |
2 |   condition: "111" contains 1
  |                             ^ expression should be `string`, but is `integer`
  |